--- a/src/components/AddTasks/index.module.css
+++ b/src/components/AddTasks/index.module.css
@@ -1,15 +1,16 @@
-
-
-
 .container {
   display: flex;
   justify-content: center;
-  margin-top: -1.68rem;
-  
+  margin-top: -7.31rem;
 }
 
 .form {
   display: flex;
   flex-direction: row;
   gap: 0.5rem;
+  width: 100%;
+}
+
+.form > input  {
+  width: 100%;
 }
