--- a/src/index.module.css
+++ b/src/index.module.css
@@ -1,3 +1,16 @@
+ 
+ @font-face {
+  font-family: 'Inter';
+  src: url( './assets/fonts/Inter-Regular.ttf');
+  font-weight: normal;
+ }
+
+ @font-face {
+  font-family: 'Inter';
+  src: url( './assets/fonts/Inter-Bold.ttf');
+  font-weight: bold;
+ }
+
  :root {
 
   --purple: #8284FA;
@@ -18,12 +31,38 @@
   font-size: 1rem;
   background-color: var(--gray600);
   color: var(--gray300);
-
  }
-
 
  * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
  }
+
+ .App {
+   align-items: center;
+   display: flex;
+   flex-direction: column;
+   width: 100%;
+   gap: 4rem;
+ }
+
+.App > div {
+  width: 100%;
+  max-width: 46rem;
+}
+
+@media (width < 755px) {
+  .App > div {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
+@media (width < 400px) {
+  :root {
+    font-size: 0.8rem;
+
+  }
+}
+
